# Hobgoblin-Engine

./: CMakeLists.txt
Assets/: lobby-spritesheet.tga  mainmenu-spritesheet.tga
Assets/Map/: MainMap.txt  MainMap2.txt  MainMap3.txt  MainMap5.txt
Assets/Sprites/: pearl.origin
Assets/Sprites/Kraken/: kraken-fin-6.origin
Assets/Sprites/Terrain/: 10.origin  11.origin  13.origin  2.origin  6.origin  8.origin  9.origin
EngineCore/Modules_L00_Foundation/S04_Unicode/: CMakeLists.txt
EngineCore/Modules_L00_Foundation/S04_Unicode/Source/: Regex.cpp
EngineCore/Modules_L00_Foundation/S04_Unicode/Test/: Unicode_test.cpp
EngineCore/Modules_L02_Principals/S00_RigelNet/Source/: Udp_connector_impl.cpp
EngineCore/Modules_L02_Principals/S01_Graphics/Source/: Sprite_loader.cpp
GameJam/: CMakeLists.txt
GameJam/DjoxTrauma/: CMakeLists.txt  Collisions.hpp  Config.hpp  Context_factory.cpp  Engine.hpp  Game_stage.hpp  Game_stage_controller.cpp  Game_stage_controller.hpp  Player_controls.hpp  Simple_zerotier.cpp  Sprite_manifest.hpp  Varmap_ids.hpp
GameJam/DjoxTrauma/GameObjects/: Diver.cpp  Loot.cpp  Pearl.cpp  Shell.cpp  Sponge.cpp
GameJam/DjoxTrauma/GameObjects/Include/GameObjects/: Bubble.hpp  Diver.hpp  Pearl.hpp  Shark.hpp  Shell.hpp  Sponge.hpp
GameJam/DjoxTrauma/GameObjects/Source/: Bubble.cpp  Diver.cpp  Pearl.cpp  Shark.cpp  Shell.cpp  Sponge.cpp
GameJam/DjoxTrauma/Managers/: Host_menu_manager.cpp  Join_menu_manager.cpp  Lobby_frontend_manager.cpp  Lobby_frontend_manager.hpp  Lobby_frontend_manager_interface.hpp  Main_gameplay_manager.cpp  Main_gameplay_manager.hpp
GameJam/DjoxTrauma/Managers/Include/Managers/: Environment_manager.hpp  Host_menu_manager.hpp  Host_menu_manager_interface.hpp  Join_menu_manager.hpp  Main_gameplay_manager.hpp  Main_gameplay_manager_interface.hpp  Main_menu_manager.hpp  Resource_manager.hpp
GameJam/DjoxTrauma/Managers/Source/: Environment_manager.cpp  Main_gameplay_manager.cpp  Main_menu_manager.cpp  Resource_manager.cpp
GameJam/Source/: Bubble.cpp  Bubble.hpp  CMakeLists.txt  Collisions.cpp  Collisions.hpp  Config.hpp  Context_factory.cpp  Diver.cpp  Diver.hpp  Engine.hpp  Environment_manager.cpp  Environment_manager.hpp  Environment_manager_interface.hpp  Game_stage.hpp  Game_stage_controller.cpp  Game_stage_controller.hpp  Host_menu_manager.cpp  Join_menu_manager.cpp  Join_menu_manager.hpp  Join_menu_manager_interface.hpp  Lobby_frontend_manager.cpp  Lobby_frontend_manager.hpp  Loot.cpp  Main.cpp  Main_gameplay_manager.cpp  Main_gameplay_manager.hpp  Main_gameplay_manager_interface.hpp  Main_menu_manager.cpp  Main_menu_manager.hpp  Main_menu_manager_interface.hpp  Pearl.cpp  Pearl.hpp  Resource_manager.cpp  Resource_manager.hpp  Resource_manager_interface.hpp  Shark.cpp  Shark.hpp  Shell.cpp  Shell.hpp  Simple_zerotier.hpp  (+4 more)
GameJam/Source/BigQuest/: Character.cpp
Overlays/GridGoblin/: CMakeLists.txt
Overlays/GridGoblin/Include/GridGoblin/: GridGoblin.hpp
Overlays/GridGoblin/Source/: Detail_access.hpp
Overlays/GridGoblin/Source/Model/: Shape.cpp  Shape_visibility_vertices.cpp
Overlays/GridGoblin/Source/Private/: Cell_model_ext.cpp  Chunk_storage_handler.cpp  Light_ext.cpp  Light_model_ext.cpp  Model_conversions.cpp
Overlays/GridGoblin/Source/Rendering/: Dimetric_renderer.cpp  Dimetric_transform.cpp  Lighting_renderer.cpp  OpenGL_helpers.cpp  OpenGL_helpers.hpp  Top_down_los_renderer.cpp  Visibility_calculator.cpp
Overlays/GridGoblin/Source/World/: World.cpp
Overlays/GridGoblin/Test/Automatic/: CMakeLists.txt  Cell_user_data_test.cpp  Model_conversions_test.cpp  Shape_conversions_test.cpp
Overlays/GridGoblin/Test/Manual/: Default_disk_io_test.cpp  Dimetric_rendering_test.cpp  Visibility_calc_test.cpp
Overlays/SPeMPE/Examples/MultiplayerFoundation/: CMakeLists.txt
Overlays/SPeMPE/Source/: Game_context.cpp
ProofOfConceptProjects/GridWorld/Source/Private/: Chunk_disk_io_handler_default.cpp  Chunk_spooler_default.cpp  Chunk_storage_handler.cpp  Model_conversions.cpp
ProofOfConceptProjects/GridWorld/Test/Manual/: Storage_handler_test.cpp
enc_temp_folder/aeae03e81932890ec8a8c366cd4daf/: Environment_manager.cpp
enc_temp_folder/cca8a7fef5fc2118db4e798f9a879d4d/: Environment_manager.hpp
(+27 files in other folders)
